tests/fixtures/negative/skf1-unsupported-algorithm.hex
534b4631010200100000
0000000000000000000000000000000000000000000000000000000000000000
0000000000000000
